--- a/.github/workflows/simple-workflow-no-comments.yml
+++ b/.github/workflows/simple-workflow-no-comments.yml
@@ -9,6 +9,9 @@ on:
   workflow_dispatch:
 jobs:  
   build:   
+# the below runner is an available github hosted runners
+# we can have and our local hosted runners if we want to run specific build
+# under our machines
     runs-on: ubuntu-latest   
     steps:    
       - uses: actions/checkout@v3  
